--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "formik": "^2.2.9",
+    "markdown-it": "^13.0.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.3.1",
+    "mysql2": "^3.3.2",
     "next": "13.4.2",
+    "pg": "^8.11.0",
+    "pg-hstore": "^2.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sequelize": "^6.31.1",
+    "sqlite3": "^5.1.6",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
