--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "firebase": "^9.22.0",
     "formik": "^2.2.9",
     "markdown-it": "^13.0.1",
     "mysql": "^2.18.1",
